Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.2(EOL), 10.3(EOL), 10.4(EOL), 10.5(EOL), 10.6(EOL)
Description
# mysqld options required for replay: --log-bin
|
USE test;
|
SET GLOBAL wsrep_forced_binlog_format=1;
|
CREATE TABLE t1(c INT PRIMARY KEY) ENGINE=MEMORY;
|
INSERT DELAYED INTO t1 VALUES(),(),();
|
SELECT SLEEP(1);
|
Leads to:
|
10.5.4 8569dac1ec9f6853a0b2f3ea9bcbda67644ead24 |
mysqld: /test/10.5_dbg/sql/sql_insert.cc:3490: bool Delayed_insert::handle_inserts(): Assertion `!mysql_bin_log.is_open() || thd.is_current_stmt_binlog_format_row()' failed.
|
|
10.5.4 8569dac1ec9f6853a0b2f3ea9bcbda67644ead24 |
Core was generated by `/test/MD260520-mariadb-10.5.4-linux-x86_64-dbg/bin/mysqld --no-defaults --core-'.
|
Program terminated with signal SIGABRT, Aborted.
|
#0 __pthread_kill (threadid=<optimized out>, signo=signo@entry=6)
|
at ../sysdeps/unix/sysv/linux/pthread_kill.c:57
|
[Current thread is 1 (Thread 0x145b29e62700 (LWP 3548649))]
|
(gdb) bt
|
#0 __pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ../sysdeps/unix/sysv/linux/pthread_kill.c:57
|
#1 0x000055988acdfd7a in my_write_core (sig=sig@entry=6) at /test/10.5_dbg/mysys/stacktrace.c:518
|
#2 0x000055988a485385 in handle_fatal_signal (sig=6) at /test/10.5_dbg/sql/signal_handler.cc:330
|
#3 <signal handler called>
|
#4 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51
|
#5 0x0000145b2863c801 in __GI_abort () at abort.c:79
|
#6 0x0000145b2862c39a in __assert_fail_base (fmt=0x145b287b37d8 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x55988ae56c98 "!mysql_bin_log.is_open() || thd.is_current_stmt_binlog_format_row()", file=file@entry=0x55988ae56988 "/test/10.5_dbg/sql/sql_insert.cc", line=line@entry=3490, function=function@entry=0x55988ae577a0 <Delayed_insert::handle_inserts()::__PRETTY_FUNCTION__> "bool Delayed_insert::handle_inserts()") at assert.c:92
|
#7 0x0000145b2862c412 in __GI___assert_fail (assertion=assertion@entry=0x55988ae56c98 "!mysql_bin_log.is_open() || thd.is_current_stmt_binlog_format_row()", file=file@entry=0x55988ae56988 "/test/10.5_dbg/sql/sql_insert.cc", line=line@entry=3490, function=function@entry=0x55988ae577a0 <Delayed_insert::handle_inserts()::__PRETTY_FUNCTION__> "bool Delayed_insert::handle_inserts()") at assert.c:101
|
#8 0x000055988a19d508 in Delayed_insert::handle_inserts (this=this@entry=0x145b074a6088) at /test/10.5_dbg/sql/sql_insert.cc:3489
|
#9 0x000055988a19f1a2 in handle_delayed_insert (arg=arg@entry=0x145b074a6088) at /test/10.5_dbg/sql/sql_insert.cc:3282
|
#10 0x000055988a78d14e in pfs_spawn_thread (arg=0x145b07428388) at /test/10.5_dbg/storage/perfschema/pfs.cc:2201
|
#11 0x0000145b2931f6db in start_thread (arg=0x145b29e62700) at pthread_create.c:463
|
#12 0x0000145b2871d88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
|
Bug confirmed present in:
MariaDB: 10.2.33 (dbg), 10.3.24 (dbg), 10.4.14 (dbg), 10.5.4 (dbg)
Bug confirmed not present in:
MariaDB: 10.1.46 (dbg), 10.1.46 (opt), 10.2.33 (opt), 10.3.24 (opt), 10.4.14 (opt), 10.5.4 (opt)
MySQL: 5.5.62 (dbg), 5.5.62 (opt), 5.6.47 (dbg), 5.6.47 (opt), 5.7.29 (dbg), 5.7.29 (opt), 8.0.19 (dbg), 8.0.19 (opt)
Attachments
Issue Links
- relates to
-
MDEV-22285 Assertion `xid_seqno > wsrep_seqno' failed in trx_rseg_update_wsrep_checkpoint on SET @@global.wsrep_start_position
-
- Closed
-
-
MDEV-22422 Assertion `! is_set()' failed in Diagnostics_area::set_eof_status
-
- Closed
-
-
MDEV-23045 Assertion `is_open()' failed in MYSQL_BIN_LOG::trx_group_commit_leader
-
- Stalled
-